<resources>
    <!-- App Basics -->
    <string name="app_name">StudentQR</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- LAUNCHER Activity -->

    <!-- Main Activity -->
    <string name="action_fetch_qrCodeString">Update</string>
    <string name="message_qrCodeFetching">Fetching QR Code</string>
    <string name="action_remove_sharedPreferences">remove QR code</string>
    <string name="qr_code_status_string">No QR code fetched</string>
    <string name="please_fetch_qr">Please fetch your QR Code</string>
    <string name="message_qrCodeFetchingNoAccount">QR Code could not be fetched, please check your login status!</string>


    <!-- Login Activity -->
    <string name="login_header" translatable="false"> ASE \nLogo</string>
    <string name="login_status_text">Logged in as: %s</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_button">login</string>
    <string name="logout_button">sign out</string>
    <string name="auth_failed">The authentication failed</string>
    <string name="auth_required">Required</string>
    <string name="err_msg_qr_fetching">The Server is not available right now.</string>
    <string name="progress_loading">Loading...</string>
    <string name="drawer_login_main">Main View</string>

    <!-- Menu -->
    <string name="menu_settings">settings</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="menu_account">account</string>
    <string name="qr_code_string_status">No QR code fetched</string>

    <!-- Nav Header Main -->
    <string name="nav_account_name">Not logged in :(</string>
    <string name="nav_user_email">Please sign in!</string>
    <string name="message_qrCodeFetchingSuccess">QR Code is fetched.</string>

</resources>
