<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/app_bar_login">

    <TextView
        android:id="@+id/login_header"
        android:text="@string/login_header"
        android:textSize="60sp"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/login_email"
        android:text="@string/login_email"
        android:inputType="textEmailAddress"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_header"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        />

    <TextView
        android:id="@+id/login_status_text"
        android:text="@string/login_status_text"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_header"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        />

    <EditText
        android:id="@+id/login_password"
        android:text="@string/login_password"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/login_email"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:ems="10"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        />

    <TextView
        android:id="@+id/login_account_name_text"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/login_status_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        />

    <Button
        android:id="@+id/logout_button"
        android:text="@string/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_status_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        />

</RelativeLayout>